--- a/rsrcs/training.ipynb
+++ b/rsrcs/training.ipynb
@@ -5,16 +5,22 @@
    "metadata": {},
    "source": [
     "## Training\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "- [Weights Initializers](#weight-initializers)\n",
+    "- [Neural Shape and hyperparameters](https://towardsdatascience.com/designing-your-neural-networks-a5e4617027ed)\n",
+    "\n",
     "### Weight initializers \n",
     "\n",
     "| Initializer       | Best For                | Key Advantage                                      | Major Downside                                 |\n",
     "|-------------------|-------------------------|----------------------------------------------------|-----------------------------------------------|\n",
-    "| Zero              | Bias Initialization     | Simplicity                                         | Fails for weights (symmetry problem)          |\n",
-    "| Random            | General                 | Breaks symmetry                                    | May cause vanishing/exploding gradients       |\n",
-    "| Xavier (Glorot)   | Tanh, Sigmoid           | Keeps variance consistent                          | Not optimal for ReLU                          |\n",
-    "| He                | ReLU, Leaky ReLU        | Prevents vanishing/exploding gradients with ReLU   | Can still explode gradients in deep nets      |\n",
-    "| LeCun             | SELU                    | Self-normalizing for specific activations          | Limited activation support                    |\n",
-    "| Orthogonal        | Recurrent Networks (RNNs)| Maintains long-term gradient flow                  | Only works with square matrices               |"
+    "| [Zero](#1---zero-initialization)              | Bias Initialization     | Simplicity                                         | Fails for weights (symmetry problem)          |\n",
+    "| [Random](#2---random-initialization)            | General                 | Breaks symmetry                                    | May cause vanishing/exploding gradients       |\n",
+    "| [Xavier (Glorot)](#3---xavier-glorot-initialization)   | Tanh, Sigmoid           | Keeps variance consistent                          | Not optimal for ReLU                          |\n",
+    "| [He](#4---he-initialization)                | ReLU, Leaky ReLU        | Prevents vanishing/exploding gradients with ReLU   | Can still explode gradients in deep nets      |\n",
+    "| [LeCun](#5---lecun-initialization)             | SELU                    | Self-normalizing for specific activations          | Limited activation support                    |\n",
+    "| [Orthogonal](#6---orthogonal-initialization)       | Recurrent Networks (RNNs)| Maintains long-term gradient flow                  | Only works with square matrices               |"
    ]
   },
   {
